--- a/login/dashboard/docs.html
+++ b/login/dashboard/docs.html
@@ -311,7 +311,7 @@
                                         <ul class="submenu-list list-unstyled">
                                             <li class="submenu-item"><a class="submenu-link" href="crud/index.php">Mis productos</a></li>
                                             <li class="submenu-item"><a class="submenu-link" href="#">Nuevo producto</a></li>
-                                            <li class="submenu-item"><a class="submenu-link" href="#">Nuevo servicio</a></li>
+                                            <li class="submenu-item"><a class="submenu-link" href="categorias/index.html">Comprar ahora</a></li>
                                         </ul>
                                     </div>
                                 </li>
