--- a/login/dashboard/orders.html
+++ b/login/dashboard/orders.html
@@ -170,8 +170,8 @@
                             <div class="app-utility-item app-user-dropdown dropdown">
                                 <a class="dropdown-toggle" id="user-dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><img src="assets/images/user.png" alt="user profile"></a>
                                 <ul class="dropdown-menu" aria-labelledby="user-dropdown-toggle">
-                                    <li><a class="dropdown-item" href="account.html">Mi negocio</a></li>
-                                    <li><a class="dropdown-item" href="settings.html">Configuración</a></li>
+                                    <li><a class="dropdown-item" href="#">Mi negocio</a></li>
+                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
