--- a/carrusel/C_tecnologia/index.html
+++ b/carrusel/C_tecnologia/index.html
@@ -1,117 +1,73 @@
 <!doctype html>
 <html>
-
 <head>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Alimentos</title>
+    <title>Tecnología</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="../../../fuentes/iconic/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../carruselstyle/estilos.css?v=<?php echo (rand()); ?>" />
-    <script src="/js/mi_script.js?v=<?php echo (rand()); ?>"></script>
+    <link rel="stylesheet" href="../carruselstyle/estilos.css?v=">
+    <script src="/js/mi_script.js?v="></script>
 
 </head>
 
-
 <body>
 
-
-    <?php
-    // Importar la conexión
-    require 'database.php';
-    $db = conectarDB();
-
-
-    // consultar
-    $query = "SELECT * FROM productos WHERE categorias = 'Tecnologia' and id = 1 and VendedorId = 1";
-    $query2 = "SELECT * FROM productos WHERE categorias = 'Tecnologia' and id = 2 and VendedorId = 1";
-    $query3 = "SELECT * FROM productos WHERE categorias = 'Tecnologia' and id = 3 and VendedorId = 1";
-
-    // obtener resultado
-    $resultado = mysqli_query($db, $query);
-    $resultado2 = mysqli_query($db, $query2);
-    $resultado3 = mysqli_query($db, $query3);
-
-
-    ?>
-
     <div class="container">
-
         <div class="container-login">
-
-
-
             <div class="wrap-login">
-
-
-
-
-                <!--LLAMADA BASE DE DATOS DE LA IMAGEN-->
                 <div class="carta">
+
                     <script>
                         $('.carousel').carousel({
                             interval: false,
                         });
                     </script>
+
                     <div id="carouselExample" class="carousel carousel slide" data-bs-interval="false">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
+
                         <div class="carousel-inner">
-
-
-                            <?php while ($productos = mysqli_fetch_assoc($resultado)) : ?>
                                 <div class="carousel-item active">
-
                                     <!--PRODUCTO IMAGEN-->
-
-                                    <img src="../../crud/admin/productos/<?php echo $productos['imagen']; ?>">
-
+                                    <img src="../recursos/img/celular.jpg">
                                     <div class="carousel-caption d-none d-md-block">
-
-                                        <h5><?php echo $productos['NombreProducto']; ?> $<b><?php echo $productos['precio']; ?></b></h5>
-
-                                        <p><?php echo $productos['descripcion']; ?></p>
-
-                                        <!--NOMBRE PRODUCTO 1--->
-                                    <?php endwhile; ?>
+                                        <h5>Celular
+                                            <b>$780.000</b>
+                                        </h5>
+                                        <p>Celular iphone 7 con pantalla de 5 pulgadas, camara de 12px y frontal de 4px.</p>
                                     </div>
                                 </div>
 
-
-
                                 <div class="carousel-item">
-                                    <?php while ($productos = mysqli_fetch_assoc($resultado2)) : ?>
-                                        <img src="../../crud/admin/productos/<?php echo $productos['imagen']; ?>">
+                                        <img src="../recursos/img/bombilla.jpg">
                                         <div class="carousel-caption d-none d-md-block">
-
-                                            <h5><?php echo $productos['NombreProducto']; ?> $<b><?php echo $productos['precio']; ?></b></h5>
-
-                                            <p><?php echo $productos['descripcion']; ?></p>
-                                        <?php endwhile; ?>
+                                            <h5>Bombillas led
+                                                <b>$6.000</b>
+                                            </h5>
+                                            <p>Hermosas bombillas led ahorradoras y perfectas para el hogar</p>
                                         </div>
-
-                                </div>
-                                <div class="carousel-item">
-                                    <?php while ($productos = mysqli_fetch_assoc($resultado3)) : ?>
-                                        <img src="../../crud/admin/productos/<?php echo $productos['imagen']; ?>">
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                            <h5><?php echo $productos['NombreProducto']; ?> $<b><?php echo $productos['precio']; ?></b></h5>
-
-                                            <p><?php echo $productos['descripcion']; ?></p>
-                                        </div>
-                                    <?php endwhile; ?>
                                 </div>
 
+                                <div class="carousel-item">
+                                        <img src="../recursos/img/reloj.jpg">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Reloj Inteligente
+                                                <b>$130.000</b>
+                                            </h5>
+                                            <p>Lleva reloj inteligente en promoción puedes revisar whattsapp, messenger, y tus redes sociales</p>
+                                        </div>                                   
+                                </div>
                         </div>
+
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
@@ -122,15 +78,6 @@
                         </button>
                     </div>
 
-
-
-
-                    <!--data-bs-interval="10000" </div>-->
-
-
-                    <!--LLAMADA BASAE DE DATOS INFORMACION-->
-
-
                     <ul class="list-inline">
                         <li class="list-inline-item">
                             <a href="../../categorias">
@@ -139,6 +86,7 @@
                                 </svg>
                             </a>
                         </li>
+
                         <li class="list-inline-item">
                             <a>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
@@ -146,6 +94,7 @@
                                 </svg>
                             </a>
                         </li>
+
                         <li class="list-inline-item">
                             <a>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
@@ -161,6 +110,7 @@
                                 </svg>
                             </a>
                         </li>
+
                         <li class="list-inline-item">
                             <a>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
@@ -168,33 +118,14 @@
                                 </svg>
                             </a>
                         </li>
-
                     </ul>
-
-
                 </div>
-
-
             </div>
-
         </div>
-
     </div>
 
-
-
     <script src="../../../jquery/jquery-3.3.1.min.js"></script>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
 </body>
-
-
-<?php
-
-// Cerrar la conexión
-mysqli_close($db);
-?>
-
 </html>
