--- a/categorias/index.html
+++ b/categorias/index.html
@@ -46,7 +46,7 @@
         <h1 class="main-title">Categorías</h1>
         <div class="container-box">
 
-            <a href="../carrusel/C_tecnologia/index.php">
+            <a href="../carrusel/C_tecnologia/index.html">
                 <div class="box box1">
                     <i class="bi bi-phone-fill icon"></i>
                     <h4 class="title">Tecnología</h4>
@@ -55,7 +55,7 @@
                 </div>
             </a>
 
-            <a href="../carrusel/C_alimentos/index.php">
+            <a href="../carrusel/C_alimentos/index.html">
                 <div class="box box2">
                     <i class="bi bi-egg-fill icon"></i>
                     <h4 class="title">Alimentos</h4>
@@ -64,7 +64,7 @@
                 </div>
             </a>
 
-            <a href="../carrusel/C_herramientas/index.php">
+            <a href="../carrusel/C_herramientas/index.html">
                 <div class="box box3">
                     <i class="bi bi-hammer icon"></i>
                     <h4 class="title">Herramientas</h4>
