Agrego ventana de perfil.php y ubicacion.php, uso de API con google maps y elimino dos opciones no muy útiles dentro de la pestaña de mi negocio

--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
                     <P>Mi Barrio En Línea surge con el propósito de pautar y dar a conocer una estrategia innovadora donde los pequeños y medianos negocios de los barrios de Medellín puedan interactuar a través de la plataforma web conociendo la ubicación
                         más próxima a los usuarios con necesidades específicas relacionadas con: Salud, Aseo y cuidado personal, ferreterías y construcción, papelerías y misceláneas, centros veterinarios, tecnología y accesorios, abastecimiento de alimentos
                         y las ventas informales. </P>
-                    <a target= ”_blank” href="https://github.com/JSlondono/">Click aqui para mas información</a>
+                    <a target= ”_blank” href="#">Click aqui para mas información</a>
                 </div>
             </div>
         </section>
@@ -431,7 +431,7 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <a href="constru/index.html" class="btn btn-dark full-width" id="pad">Enviar formulario</a>
+                            <a href="#" class="btn btn-dark full-width" id="pad">Enviar formulario</a>
                         </div>
                     </div>
                 </div>
@@ -444,15 +444,15 @@
         <div class="container">
             <img src="images/logo transparente.png" width="150" alt="logo ">
             <ul class="list-inline ">
-                <li class="list-inline-item footer-menu "><a href="constru/index.html">Acerca de nosotros</a></li>
-                <li class="list-inline-item footer-menu "><a href="constru/index.html">Políticas de privacidad</a></li>
-                <li class="list-inline-item footer-menu "><a href="constru/index.html">Política de cookies</a></li>
-                <li class="list-inline-item footer-menu "><a href="constru/index.html">Términos y condiciones</a></li>
+                <li class="list-inline-item footer-menu "><a href="#">Acerca de nosotros</a></li>
+                <li class="list-inline-item footer-menu "><a href="#">Políticas de privacidad</a></li>
+                <li class="list-inline-item footer-menu "><a href="#">Política de cookies</a></li>
+                <li class="list-inline-item footer-menu "><a href="#">Términos y condiciones</a></li>
                 <li class="list-inline-item footer-menu "><a href="index.html">Inicio</a></li>
             </ul>
                         <div class="box__copyright">
                 <hr>
-                <p>Todos los derechos reservados © 2021 <b>Mi Barrio en linea</b></p>
+                <p>Todos los derechos reservados © 2021 <b>Tu Barrio En linea</b></p>
             </div>
         </div>
     </footer>
