--- a/categorias/index.html
+++ b/categorias/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="container__header">
             <div class="logo">
-                <img src="css/logo.png" alt="">
+               <a href="../"> <img src="css/logo.png" alt=""></a>
             </div>
             <div class="container__nav">
                 <nav id="nav">
@@ -34,7 +34,7 @@
                 </nav>
 
 
-                <div class="btn__menu" id="btn_menu"><i class="fas fa-bars"></i></div>
+                <div class="btn__menu" id="btn_menu"><img src="css/menu-sharp.svg" width="20px"></div>
 
             </div>
 
