Se organizan las rutas del href

--- a/Index.html
+++ b/Index.html
@@ -175,7 +175,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="recursos/vendedores top/Vendedor1.jpg" class="img-fluid" alt="vendedor" id="vendo" wi>
+                        <img src="recursos/portafolio/Vendedor1.jpg" class="img-fluid" alt="vendedor" id="vendo" wi>
                     </div>
                 </div>
 
@@ -201,7 +201,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="recursos/vendedores top/Vendedor2.jpg" class="img-fluid" alt="vendedor" id="vendo">
+                        <img src="recursos/portafolio/Vendedor2.jpg" class="img-fluid" alt="vendedor" id="vendo">
                     </div>
                 </div>
 
@@ -226,7 +226,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="recursos/vendedores top/Vendedor3.jpg" class="img-fluid" alt="vendedor" id="vendo">
+                        <img src="recursos/portafolio/Vendedor3.jpg" class="img-fluid" alt="vendedor" id="vendo">
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                                 <div class="row">
                                     <!--Aqui va la imagen del usuario-->
                                     <div class="col-md-3">
-                                        <img src="recursos/profiles/member-01.jpg">
+                                        <img src="recursos/portafolio/vendedor1.jpg">
                                     </div>
                                     <div class="col-md-9">
                                         <h6>Marta Gonzales Correa</h6>
@@ -337,7 +337,7 @@
                                 <div class="row">
                                     <!--Aqui va la imagen del usuario-->
                                     <div class="col-md-3">
-                                        <img src="recursos/profiles/member-02.jpg">
+                                        <img src="recursos/portafolio/vendedor2.jpg">
                                     </div>
 
                                     <div class="col-md-9">
@@ -367,7 +367,7 @@
                                 <div class="row">
                                     <!--Aqui va la imagen del usuario-->
                                     <div class="col-md-3">
-                                        <img src="recursos/profiles/member-03.jpg">
+                                        <img src="recursos/portafolio/vendedor3.jpg">
                                     </div>
                                     <div class="col-md-9">
                                         <h6>Camila Benavides Gutierrez</h6>
