--- a/categorias/index.html
+++ b/categorias/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="container__header">
             <div class="logo">
-               <a href="../"> <img src="css/logo.png" alt=""></a>
+                <img src="css/logo.png" alt="">
             </div>
             <div class="container__nav">
                 <nav id="nav">
@@ -34,7 +34,7 @@
                 </nav>
 
 
-                <div class="btn__menu" id="btn_menu"><img src="css/menu-sharp.svg" width="20px"></div>
+                <div class="btn__menu" id="btn_menu"><i class="fas fa-bars"></i></div>
 
             </div>
 
@@ -51,7 +51,7 @@
                     <i class="bi bi-phone-fill icon"></i>
                     <h4 class="title">Tecnología</h4>
                     <p>En cuentra todo lo relacionado con celulares.</p>
-                    <div class="-hover"></div>
+                    <div class="background-hover"></div>
                 </div>
             </a>
 
